--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iamhpark.github.io",
+  "homepage": "https://https://iamhpark.github.io/shopping-mall/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
